# Grug

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  index.html  main.py  mkdocs.yml  pathbuilder_research.md.md  pyproject.toml  requirements.txt  roadmap.md
.github/: copilot-instructions.md
.github/instructions/: web.instructions.md
.github/workflows/: docker-publish.yml  docs.yml  release.yml
about/privacy_policy/: index.html
about/terms_of_service/: index.html
about/usage/: index.html
alembic/: README.md  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_campaigns_characters_user_profiles.py  0003_fix_timestamp_timezones.py  0004_is_super_admin_stub.py  0b2cc423c3cc_init.py  1935af011a6d_remove_food_history.py  20260301_2040_ecce9ea827b6_drop_guild_config_prefix.py  20260301_2100_merge_reminders_into_scheduled_tasks.py  20260301_2254_a85972762040_add_source_column_to_scheduled_tasks.py  (+74 more)
api/: Dockerfile  auth.py  config.py  database.py  deps.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py
api/routes/: __init__.py  admin.py  auth.py  campaigns.py  characters.py  dice.py  documents.py  encounters.py  events.py  glossary.py  gold.py  guilds.py  manager.py  monsters.py  notes.py  personal.py  public.py  rule_sources.py  session_notes.py  system.py  usage.py
config/: local.env  postgres.env  secrets.example.env
docs/: Dockerfile  README.md  changelog.md  docstrings.md  faq.md  index.md  notes.md
docs/about/: usage.md  (+2 more)
grug/: __init__.py  __main__.py  admin.py  ai.py  ai_functions.py  auth.py  bg_task_manager.py  bot_discord.py  bot_discord_commands.py  cache.py  db.py  dice.py  encounter.py  event_reminders.py  health.py  llm_usage.py  log_config.py  loot.py  metrics.py  models.py  models_crud.py  models_events.py  monster_search.py  openai_assistant.py  pyproject.toml  reminders.py  scheduler.py  scheduler_models.py  session_notes.py  settings.py  utils.py
grug/agent/: core.py  prompt.py
grug/agent/tools/: banking_tools.py  base.py  campaign_tools.py  character_tools.py  dice_tools.py  glossary_tools.py  initiative_tools.py  loot_tools.py  mcp_tools.py  notes_tools.py  rag_tools.py  rules_tools.py  scheduling_tools.py  session_notes_tools.py
grug/api_routers/: __init__.py  base.py  bot_interactions.py  crud.py  discord_api.py  event_api_router.py  food.py  sandbox.py  scheduler_api_router.py
grug/assistant_functions/: __init__.py  archives_of_nethys.py  food.py  images.py
grug/assistant_interfaces/: discord_interface.py  email_interface.py  sms_interface.py
grug/assistant_interfaces/discord_interface/: __init__.py  attendance.py  bot.py  food.py  utils.py
grug/bot/: auto_respond.py  client.py
grug/bot/cogs/: admin.py  ai_chat.py  base.py  campaigns.py  characters.py  dice.py  documents.py  glossary.py  initiative.py
grug/bot/views/: event_rsvp.py
grug/character/: __init__.py  indexer.py  models.py  parser.py  passives.py  pathbuilder.py
grug/config/: settings.py
grug/db/: models.py  pg_models.py  session.py
grug/discord_views/: attendance.py  food.py
grug/manager/: __init__.py  prompt.py  reviewer.py
grug/rag/: embedder.py  history_archiver.py  indexer.py  retriever.py  vector_store.py
grug/rag/backends/: __init__.py  chroma_store.py  pgvector_store.py
grug/rules/: __init__.py  sources.py
grug/scheduler/: manager.py  sync.py  tasks.py
grug/templates/sqladmin/: error.html  index.html  login.html
grug/utils/: aon.py  attendance.py  food.py  user_management.py
postgres/: Dockerfile
sandbox/: image_generation.ipynb
scripts/: alembic_autogenerate.py  check_alembic.py
search/: search_index.json
tests/: conftest.py  test_agent_tools.py  test_ai_functions.py  test_auto_respond.py  test_cache.py  test_calendar_events.py  test_campaign_tools.py  test_character_parser.py  test_config.py  test_dice.py  test_encounter.py  test_glossary.py  test_history_archiver.py  test_impersonation.py  test_llm_usage.py  test_loot.py  test_manager.py  test_monster_search.py  test_notes.py  test_passives.py  test_permissions.py  test_rag.py  test_rag_tools.py  test_scheduler.py  test_scheduling_tools.py  test_session_notes.py
web/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
(+97 files in other folders)
