[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grug-bot"
version = "0.1.0"
description = "Discord bot launcher for Grug"
requires-python = ">=3.12"
dependencies = [
    "grug",
]

[tool.uv.sources]
grug = { workspace = true }

[tool.uv.workspace]
members = ["grug", "api"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
grug = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main"]
