[project]
name = "grug-bot"
version = "0.2"
description = "Discord bot launcher for Grug"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "elasticsearch>=8.13.0,<9.0.0",
    "grug",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
grug = { workspace = true }
grug-api = { workspace = true }

[tool.uv.workspace]
members = ["grug", "api"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.19.0",
    "grug-api",
]

[project.scripts]
grug = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # discord.py imports the stdlib 'audioop' module which is deprecated in 3.12.
    # This is a third-party issue we cannot fix.
    "ignore:'audioop' is deprecated:DeprecationWarning",
    # SQLAlchemy async connection GC timing artefact — the cancel coroutine is
    # created by the driver cleanup path but never awaited when the connection
    # object is collected during a test that didn't open it. Not a real leak.
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
]

[tool.setuptools]
py-modules = ["main"]
